--- a/plugins/greenshift-blocks/skills/greenshift-blocks/templates/section-wrapper.html
+++ b/plugins/greenshift-blocks/skills/greenshift-blocks/templates/section-wrapper.html
@@ -1,8 +1,9 @@
 <!-- Full-Width Section with Centered Content -->
 <!-- wp:greenshift-blocks/element {"id":"gsbp-a1b2c3d","tag":"section","type":"inner","localId":"gsbp-a1b2c3d","align":"full","styleAttributes":{"display":["flex"],"justifyContent":["center"],"flexDirection":["column"],"alignItems":["center"],"paddingRight":["var(\u002d\u002dwp\u002d\u002dcustom\u002d\u002dspacing\u002d\u002dside, min(3vw, 20px))"],"paddingLeft":["var(\u002d\u002dwp\u002d\u002dcustom\u002d\u002dspacing\u002d\u002dside, min(3vw, 20px))"],"paddingTop":["var(\u002d\u002dwp\u002d\u002dpreset\u002d\u002dspacing\u002d\u002d80, 5rem)"],"paddingBottom":["var(\u002d\u002dwp\u002d\u002dpreset\u002d\u002dspacing\u002d\u002d80, 5rem)"],"marginBlockStart":["0px"],"position":["relative"]},"isVariation":"contentwrapper","metadata":{"name":"Section Name"}} -->
 <section class="gsbp-a1b2c3d alignfull"><!-- wp:greenshift-blocks/element {"id":"gsbp-e4f5g6h","type":"inner","localId":"gsbp-e4f5g6h","styleAttributes":{"maxWidth":["100%"],"width":["var(\u002d\u002dwp\u002d\u002dstyle\u002d\u002dglobal\u002d\u002dwide-size, 1200px)"]},"isVariation":"nocolumncontent","metadata":{"name":"Content Area"}} -->
-<div class="gsbp-e4f5g6h">
-<!-- ADD YOUR CONTENT HERE -->
-</div>
-<!-- /wp:greenshift-blocks/element --></section>
+  <div class="gsbp-e4f5g6h">
+    <!-- ADD YOUR CONTENT HERE -->
+  </div>
+  <!-- /wp:greenshift-blocks/element -->
+</section>
 <!-- /wp:greenshift-blocks/element -->
